--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,66 @@ section, summary, time, mark, audio, video {
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
+/* Add a black background color to the top navigation */
+.topnav {
+	background-color: #ffffff;
+	overflow: hidden;
+	position: sticky !important;
+	top:0;
+	z-index: 99;
+	border-bottom: 1px solid black;
+}
 
+/* Style the links inside the navigation bar */
+.topnav a {
+	float: left;
+	display: block;
+	color: #00759f;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+	background-color: #ddd;
+	color: #00759f;
+}
+
+/* Add an active class to highlight the current page */
+.topnav a.active {
+	background-color: #00759f;
+	color: #ffffff;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+	display: none;
+}
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+	.topnav a:not(:first-child) {display: none;}
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+	.topnav.responsive {position: relative;}
+	.topnav.responsive a.icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
+	}
+}
 body {
 	line-height: 1;
 }
@@ -58,6 +117,38 @@ body {
 mark {
 	background-color: transparent;
 	color: inherit;
+}
+.center-container {
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+.members-group {
+	margin-bottom: 1em;
+}
+.members-pi .profile-pic {
+	width: 100px;
+	height: 100px;
+}
+.members-pi {
+	border-right: solid 1px black;
+	padding-right: 3em !important;
+	width: 20em;
+}
+
+.members-underling .profile-pic{
+	width: 75px;
+	height: 75px;
+}
+.members-underling-container {
+
+}
+.members-underling p {
+	font-size: small;
+	border: solid 1px black;
+	border-radius: 5px;
+	padding: 1em;
 }
 
 input::-moz-focus-inner {
@@ -2391,8 +2482,17 @@ input, select, textarea {
 		}
 
 			.image.fit img {
-				width: 100%;
+				width: 7em;
+				margin-left: auto;
+				margin-right: auto;
 			}
+
+		.profile-pic {
+			vertical-align: middle;
+			width: 150px;
+			height: 150px;
+			border-radius: 50%;
+		}
 
 /* List */
 
@@ -2826,7 +2926,7 @@ input, select, textarea {
 			background-color: #333;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
-			background-image: url("images/overlay1.png"), url("../../images/header.jpg");
+			/*background-image: url("images/overlay1.png"), url("../../images/header.jpg");*/
 			background-size: auto,							cover;
 		}
 
@@ -2916,10 +3016,9 @@ input, select, textarea {
 		padding: 9em 0 9em 0 ;
 		background-color: #4686a0;
 		color: rgba(255, 255, 255, 0.75);
-		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
-		background-position: top left,						center center,					center center;
-		background-size: auto,							cover,							cover;
+		background-attachment: fixed,fixed,fixed;
+		/*background-image: url("../../images/pietro-jeng-n6B49lTx7NM-unsplash.jpg");*/
+		background-size: contain;
 		overflow: hidden;
 		position: relative;
 		text-align: center;
@@ -3038,19 +3137,19 @@ input, select, textarea {
 			}
 
 		#header .inner {
-			-moz-transition: -moz-transform 1.5s ease, opacity 2s ease;
-			-webkit-transition: -webkit-transform 1.5s ease, opacity 2s ease;
-			-ms-transition: -ms-transform 1.5s ease, opacity 2s ease;
-			transition: transform 1.5s ease, opacity 2s ease;
-			-moz-transition-delay: 0.25s;
-			-webkit-transition-delay: 0.25s;
-			-ms-transition-delay: 0.25s;
-			transition-delay: 0.25s;
-			-moz-transform: scale(1);
-			-webkit-transform: scale(1);
-			-ms-transform: scale(1);
-			transform: scale(1);
-			opacity: 1;
+			/*-moz-transition: -moz-transform 1.5s ease, opacity 2s ease;*/
+			/*-webkit-transition: -webkit-transform 1.5s ease, opacity 2s ease;*/
+			/*-ms-transition: -ms-transform 1.5s ease, opacity 2s ease;*/
+			/*transition: transform 1.5s ease, opacity 2s ease;*/
+			/*-moz-transition-delay: 0.25s;*/
+			/*-webkit-transition-delay: 0.25s;*/
+			/*-ms-transition-delay: 0.25s;*/
+			/*transition-delay: 0.25s;*/
+			/*-moz-transform: scale(1);*/
+			/*-webkit-transform: scale(1);*/
+			/*-ms-transform: scale(1);*/
+			/*transform: scale(1);*/
+			/*opacity: 1;*/
 			position: relative;
 			z-index: 1;
 		}
@@ -3110,10 +3209,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: #4686a0;
-		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		text-align: center;
