Swapped image fit to "cover"

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2582,6 +2582,7 @@ input, select, textarea {
 			width: 150px;
 			height: 150px;
 			border-radius: 50%;
+			object-fit: cover;
 		}
 
 /* List */
