--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,10 +131,12 @@ mark {
 	margin-bottom: 1em;
 }
 .member .icon {
-	font-size: 3.25em;
+	font-size: 3.05em;
 	margin-bottom: 0 !important;
-	display: block;
-	padding: 0.3em;
+	display: table-header-group;
+	top: 8%;
+	width: 75px;
+	height: 75px;
 }
 
 .member-pi {
@@ -147,16 +149,17 @@ mark {
 	width: 75px;
 	height: 75px;
 	object-fit: cover;
+	display: table-row;
 }
 .member-container {
 	display: block;
 }
 .member {
-	display: inline-block;
+	display: inline-table;
 	border: solid 1px black;
 	border-radius: 5px;
 	width: 10em;
-	height: 10em;
+	height: 12em;
 	overflow-wrap: break-word;
 	margin-bottom: 0.2em;
 	padding-top: 1em;
@@ -166,6 +169,21 @@ mark {
 	margin: 0;
 	display: grid;
 	line-height: 1.7em;
+}
+.member-bio-btn {
+	width: 50%;
+	background-color: #4a87d3 !important;
+	color: white !important;
+	margin: 1em auto;
+}
+.member-bio-btn:hover {
+	background-color: #ffffff !important;
+	color: #4a87d3 !important;
+}
+
+
+.member > .expanded-text {
+	display: none;
 }
 .ui-dialog-titlebar-close {
 	background-color: white;
@@ -221,21 +239,6 @@ mark {
 		text-align: center;
 	}
 
-}
-.member-bio-btn {
-	width: 50%;
-	background-color: #4a87d3 !important;
-	color: white !important;
-	margin: auto;
-}
-.member-bio-btn:hover {
-	background-color: #ffffff !important;
-	color: #4a87d3 !important;
-}
-
-
-.member > .expanded-text {
-	display: none;
 }
 .org-logo {
 	width: 250px;
